# claude-code-tmux-notify

./: .gitignore  README.md  README.zh.md  com.july.agent-tmux-notify.plist  com.july.claude-code-tmux-notify.plist  config.toml.default  main.py  pyproject.toml  service.sh  test_hooks.py
agent_tmux_notify/: cli.py  config.py  detector.py  hook_server.py  monitor.py  popup.py  responder.py  setup_hooks.py  tmux.py
claude_code_tmux_notify/: cli.py  config.py  detector.py  hook_server.py  monitor.py  popup.py  setup_hooks.py  tmux.py
packaging/homebrew/: README.md  agent-tmux-notify.rb
